# pulse-formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml  ingest.yml
src/firefly/: __init__.py  cli.py  comparator.py  discoverer.py  parser.py
src/pulse/: __init__.py  checker.py  cli.py  comparator.py  formatter.py
tests/: test_firefly.py  test_pulse.py
